// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 1 exit proof — real lexicon (T-043 / T-044) > snapshot: the Nanda/Shukla base reading is stable 1`] = `
"## The Day-Lord

Ravivara (Sunday) — the day of the Sun. The day burns with the steady radiance of the self, and the soul warms toward its own centre. selfhood, vitality, and the radiant center You might notice a quiet pull toward whatever feels most essential and true in you.

## The Lunar Day

Shashthi (Shukla) — a Nanda lunar day of the waxing fortnight, the bright crescent nearly half-filled, held by Kartikeya (Skanda). A bright valor delights in itself, keen and full of play. You might notice a bright, playful energy that enjoys its own keenness.

## The Moon's Mansion

The Moon rests in Uttara Phalguni, ruled by Sun, its symbol The back legs of a bed (Manushya (human)). A generous, faithful steadiness pledges itself to lasting bonds. There may be a readiness to give and to keep promises, and a warmth toward friendship.

## Conditions of the Day

The yoga is Parigha (An inauspicious yoga; the name means "an iron bar that bars a gate," traditionally ascribed obstruction, barriers, and blocked passage.); the karana is Kaulava (movable). A barred gate stands somewhere across the day's path. Warmth toward others colors the moment under Mitra, the tone of kinship and alliance. There may be a threshold that does not yet open, however it is approached.

---

The sky above is the same for everyone today. To see how this weather meets your own pattern, add your birth moment."
`;

exports[`Phase 1 exit proof — real lexicon (T-043 / T-044) > snapshot: the Rikta/Krishna base reading is stable and distinct 1`] = `
"## The Day-Lord

Ravivara (Sunday) — the day of the Sun. The day burns with the steady radiance of the self, and the soul warms toward its own centre. selfhood, vitality, and the radiant center You might notice a quiet pull toward whatever feels most essential and true in you.

## The Lunar Day

Chaturthi (Krishna) — a Rikta lunar day of the waning fortnight, the gibbous arc narrowing, held by Ganesha. A deep clearing opens, dissolving obstacles from within. There may be a deep inner clearing, something dissolving from within.

## The Moon's Mansion

The Moon rests in Purva Bhadrapada, ruled by Jupiter, its symbol A sword, the front legs of a funeral cot (Manushya (human)). A fervent, two-sided fire burns toward radical transformation. You might notice an intensity that reaches past the ordinary, and a spark of the visionary.

## Conditions of the Day

The yoga is Atiganda (An inauspicious yoga; the name means "great danger" or "great knot," traditionally ascribed obstruction, friction, and hazard.); the karana is Balava (movable). A tightened knot sits somewhere in the grain of the day. A youthful, Brahma-blessed strength moves through the hours, buoyant and devotional. There may be a snag or two in the day's grain, meeting more resistance than usual.

---

The sky above is the same for everyone today. To see how this weather meets your own pattern, add your birth moment."
`;
